--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi>=0.115.0,<1.0.0
-uvicorn>=0.30.0,<1.0.0
-requests>=2.32.0,<3.0.0
-openai>=1.40.0,<2.0.0
-pydantic>=2.8.0,<3.0.0
-tiktoken>=0.7.0,<1.0.0
+fastapi==0.128.8
+uvicorn==0.39.0
+requests==2.32.5
+openai==1.109.1
+pydantic==2.12.5
+tiktoken==0.12.0
