Add eval mode controls, judge flow, and robustness fallbacks

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,5 @@
 [pytest]
 testpaths =
-    tests/unit
-    tests/integration
+    tests
 markers =
     integration: marks live integration tests that require external API/network
